# public/docs/api.yaml
@@ -34,10 +34,6 @@ servers:
   - url: https://dev.cinewinx.com.br
     description: Development server
 tags:
-  - name: Session
-    description: Operations related to sessions
-  - name: User
-    description: Operations related to users
   - name: Health
     description: Operations related to system health
   - name: Movie
@@ -64,7 +60,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/HealthCheckResponse'
 
-  /movies:
+  /posts:
     get:
       summary: List Movies
       description: Returns a list of movies.
@@ -86,7 +82,7 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Post'
-  /movies/videos:
+  /posts/videos:
     get:
       summary: Get Movie Video
       description: Returns a movie video by ID.
@@ -132,7 +128,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/NotFound'
-  /movies/{messageId}:
+  /posts/{messageId}:
     get:
       summary: Get Movie
       description: Returns a movie by ID.
@@ -165,7 +161,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/NotFound'
-  /movies/images:
+  /posts/images:
     get:
       summary: Get Movie Image
       description: Returns a movie image by ID.
@@ -252,15 +248,15 @@ components:
                 example: email
             example:
               - {
-                  'message': 'The email has already been taken',
-                  'rule': 'database.unique',
-                  'field': 'email',
-                }
+                'message': 'The email has already been taken',
+                'rule': 'database.unique',
+                'field': 'email',
+              }
               - {
-                  'message': 'The username has already been taken',
-                  'rule': 'database.unique',
-                  'field': 'username',
-                }
+                'message': 'The username has already been taken',
+                'rule': 'database.unique',
+                'field': 'username',
+              }
 
     # health schemas
     HealthCheckResponse:
@@ -424,67 +420,67 @@ components:
           items:
             type: string
           description: The country of origin of the movie.
-          example: [Japão]
+          example: [ Japão ]
         flags_of_origin:
           type: array
           items:
             type: string
           description: The flags of the country of origin of the movie.
-          example: [🇯🇵]
+          example: [ 🇯🇵 ]
         directors:
           type: array
           items:
             type: string
           description: The directors of the movie.
-          example: [YoshikiTakahashi]
+          example: [ YoshikiTakahashi ]
         writers:
           type: array
           items:
             type: string
           description: The writers of the movie.
-          example: []
+          example: [ ]
         cast:
           type: array
           items:
             type: string
           description: The cast of the movie.
-          example: [YohtaKawase, RyujuKobayashi, EitaOkuno, AyaSaiki, ShingoMizusawa]
+          example: [ YohtaKawase, RyujuKobayashi, EitaOkuno, AyaSaiki, ShingoMizusawa ]
         languages:
           type: array
           items:
             type: string
           description: The languages of the movie.
-          example: [Português]
+          example: [ Português ]
         flags_of_language:
           type: array
           items:
             type: string
           description: The flags of the languages of the movie.
-          example: [🇧🇷]
+          example: [ 🇧🇷 ]
         subtitles:
           type: array
           items:
             type: string
           description: The subtitles of the movie.
-          example: []
+          example: [ ]
         flags_of_subtitles:
           type: array
           items:
             type: string
           description: The flags of the subtitles of the movie.
-          example: []
+          example: [ ]
         genres:
           type: array
           items:
             type: string
           description: The genres of the movie.
-          example: [Ação, Drama, Thriller, Mistério, CinemaJaponês]
+          example: [ Ação, Drama, Thriller, Mistério, CinemaJaponês ]
         tags:
           type: array
           items:
             type: string
           description: The tags of the movie.
-          example: []
+          example: [ ]
         synopsis:
           type: string
           description: The synopsis of the movie.
@@ -497,17 +493,17 @@ components:
         {
           'title': 'Fúria Sem Limites',
           'release_date': '2022',
-          'country_of_origin': ['Japão'],
-          'flags_of_origin': ['🇯🇵'],
-          'directors': ['YoshikiTakahashi'],
-          'writers': [],
-          'cast': ['YohtaKawase', 'RyujuKobayashi', 'EitaOkuno', 'AyaSaiki', 'ShingoMizusawa'],
-          'languages': ['Português'],
-          'flags_of_language': ['🇧🇷'],
-          'subtitles': [],
-          'flags_of_subtitles': [],
-          'genres': ['Ação', 'Drama', 'Thriller', 'Mistério', 'CinemaJaponês'],
-          'tags': [],
+          'country_of_origin': [ 'Japão' ],
+          'flags_of_origin': [ '🇯🇵' ],
+          'directors': [ 'YoshikiTakahashi' ],
+          'writers': [ ],
+          'cast': [ 'YohtaKawase', 'RyujuKobayashi', 'EitaOkuno', 'AyaSaiki', 'ShingoMizusawa' ],
+          'languages': [ 'Português' ],
+          'flags_of_language': [ '🇧🇷' ],
+          'subtitles': [ ],
+          'flags_of_subtitles': [ ],
+          'genres': [ 'Ação', 'Drama', 'Thriller', 'Mistério', 'CinemaJaponês' ],
+          'tags': [ ],
           'synopsis': 'Fukama é um detetive japonês conhecido por perder o controle quando sente raiva. Após um tratamento no exterior, ele retorna ao Japão e encontra sua cidade protegida por um grupo de vigilantes. Ao descobrir segredos obscuros sobre o grupo, Fukama percebe que sua raiva será colocada à prova mais uma vez.',
           'curiosities': null,
         }
@@ -517,11 +513,11 @@ components:
         image_url:
           type: string
           description: The URL of the image.
-          example: http://localhost:3333/movies/images?message_id=7188
+          example: http://localhost:3333/posts/images?message_id=7188
         video_url:
           type: string
           description: The URL of the video.
-          example: 'http://localhost:3333/movies/stream?document_id=5044457385712682420'
+          example: 'http://localhost:3333/posts/stream?document_id=5044457385712682420'
         grouped_id:
           type: string
           description: The grouped ID of the post.
